# null

./: .travis.yml  CMakeLists.txt  CMakeLists.txt.in  Polygon_calculator.c  Polygon_calculator.cpp  Polygon_calculator.h  README.rst  main.c  unit_tests.cpp
dynamic/: CMakeLists.txt  Dynamic.c  Dynamic.h
static/: CMakeLists.txt  Static.c  Static.h
